# pyserver

./: .gitignore  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: a992aaf3ff66_create_games_table_with_uuid.py
api/: __init__.py  base_router.py  routes.py
api/games/: index.py
api/healthcheck/: index.py
constants/: __init__.py  secrets.py
db/: __init__.py  base.py  dependencies.py
middleware/: __init__.py  base.py  manager.py
middleware/oas_validation/: __init__.py  index.py
middleware/oas_validation/validators/: index.py
models/: game.py
repositories/: __init__.py  game_repository.py
schemas/: __init__.py  games.py
services/: game_service.py
