[project]
name = "pyserver"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "pydantic-settings>=2.13.1",
    "sqlalchemy>=2.0.48",
    "fastapi[standard]>=0.135.3",
    "psycopg2>=2.9.11",
    "openapi-core>=0.23.1",
    "aioitertools>=0.13.0",
]
[tool.fastapi]
entrypoint = "main:app"
